    significant debugging help provided by dallas.
  * Fix a regression that broke the Special:Manage page.  Bug reported with a
    suggested fix by tfschueller.
  * Fix a regression that broke the Special:Move page (dallas).
  * Resolve a logic error that prevented topics from being retrieved from the
    cache at appropriate times.  Pointed out by Jim.


0.6.4
=====

New Features:

  * Update and reorganize the monolithic jamwiki project structure into the
    more modular jamwiki-core, jamwiki-web and jamwiki-war sub-projects.  As
    a result of this change it is now possible to use the JAMWiki parser as a
    standalone library.
  * Update the parser to generate syntax that more exactly matches the parsed
    HTML output of Mediawiki.
  * Significantly improve the JAMWiki unit-test coverage.
  * Ignore line feeds in diffs to prevent showing changes due only to file
    format differences.
  * Add an option to view only untranslated keys on the Special:Translation
    page.
  * Upgrade to Lucene Search 2.3.1.
  * Updated spam filter patterns.

Bugfixes:

  * Resolve broken parsing of Javascript tags for wikis that have enabled the
    "allow Javascript" option.  Reported by ksdprasad.
  * Resolve potential issues with invalid URLs that contain multiple "/"
    characters such as http://example.com/wiki//en/StartingPoints.  Reported
    with a suggested fix by an anonymous JAMWiki user.
  * Resolve an issue that prevented viewing user contributions for users with
    logins containing underscores.  Reported by yesesnono.
  * Add field-length checks to all database inserts/updates and either trim the
    field or report an error when a field exceeds the maximum allowed length.
  * Fix an issue that prevented template <noinclude> and <includeonly> sections
    from displaying templates, signatures, and other content that requires
    parser pre-processing.  Reported by ean.
  * Category pages were previously displaying only images, articles, and